Fixes section spacing

--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -35,8 +35,11 @@ h1 {
 
 /* Sections ----------------------------------------- */
 
+body > section:first-of-type {
+    margin-top: 65px; /* Needed for the fixed header */
+}
+
 section {
-    margin-top: 65px;
     padding: 60px 40px;
     border-top: 1px solid hsl(0,0%,99%);
     border-bottom: 1px solid hsl(0,0%,85%);
@@ -561,7 +564,7 @@ hr {
 @media all and (max-width: 800px) { /* width needs to be manually adjusted if nav changes */
     
     body > section:first-of-type {
-        margin-top: 0;
+        margin-top: 0px;
     }
     
     section {
